kubernetes/reposilite/ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: reposilite
  namespace: reposilite
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`repo.external.rafa.run`)
      kind: Rule
      services:
        - name: reposilite
          port: http
  tls:
    secretName: external-rafa-run-tls
